k3s/cluster/apps/replicated/it-tools/workload/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: it-tools
  namespace: it-tools
  labels:
    app.kubernetes.io/name: it-tools
    app.kubernetes.io/component: app
spec:
  selector:
    app.kubernetes.io/name: it-tools
    app.kubernetes.io/component: app
  ports:
    - name: http
      port: 80
      targetPort: http
